[package]
name = "lunatic-control-axum"
version = "0.13.3"
edition = "2024"
description = "TBD"
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates"
license = "Apache-2.0 OR MIT"

[dependencies]
lunatic-control = { workspace = true }
lunatic-distributed = { workspace = true }

anyhow = { workspace = true }
axum = { version = "0.8", features = ["json", "query", "macros"] }
axum-extra = "0.10"
tower-http = { version = "0.6", features = ["limit"] }
base64-url = "2.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dashmap = { workspace = true }
getrandom = "0.2.8"
http = "1"
log = { workspace = true }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
asn1-rs = "0.5.2"
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true, features = ["io-util", "net", "rt", "sync", "time", "fs"] }
uuid = { workspace = true }
