[package]
name = "lunatic-distributed-api"
version = "0.13.2"
edition = "2024"
description = "A simple control server implementation"
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates"
license = "Apache-2.0 OR MIT"

[dependencies]
lunatic-common-api = { workspace = true }
lunatic-distributed = { workspace = true }
lunatic-error-api = { workspace = true }
lunatic-process = { workspace = true }
lunatic-process-api = { workspace = true }

asn1-rs = "0.5.2"
anyhow = { workspace = true }
bincode = { workspace = true }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rmp-serde = "1.3"
log = { workspace = true }
serde_json = "1"
tokio = { workspace = true, features = ["time"] }
wasmtime = { workspace = true }
